Weitere Grenzen mit Math.clamp ausdrücken